--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@nuxt/ui-pro": "^1.4.1",
     "@nuxthub/core": "^0.7.3",
     "drizzle-orm": "^0.33.0",
+    "html2canvas": "^1.4.1",
+    "lodash": "^4.17.21",
     "nuxt": "^3.12.4",
     "nuxt-auth-utils": "^0.3.4",
     "nuxt-security": "2.0.0-rc.9",
@@ -24,6 +26,7 @@
     "uncrypto": "^0.1.3",
     "vue": "latest",
     "vue-router": "^4.4.3",
+    "vuewordcloud": "^19.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
