--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -10,6 +10,7 @@ permissions:
 
 jobs:
   autofix:
+    if: false  # This disables the workflow
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
